--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -27,8 +27,13 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
+    "dompurify": "^3.1.3",
+    "jsdom": "^24.0.0",
     "mongoose": "^8.3.3",
     "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
@@ -39,6 +44,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
